--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="QueryHandlers\Users\" />
+  </ItemGroup>
+
 </Project>
